@@ -1,5 +1,26 @@
 package it.uniroma2.art.semanticturkey.extension.impl.reformattingexporter.spreadsheetserializer;
 
+import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+
+import javax.annotation.Nullable;
+
+import org.eclipse.rdf4j.model.IRI;
+import org.eclipse.rdf4j.model.Literal;
+import org.eclipse.rdf4j.model.Value;
+import org.eclipse.rdf4j.model.vocabulary.RDF;
+import org.eclipse.rdf4j.query.BindingSet;
+import org.eclipse.rdf4j.query.TupleQuery;
+import org.eclipse.rdf4j.query.TupleQueryResult;
+import org.eclipse.rdf4j.repository.RepositoryConnection;
+import org.eclipse.rdf4j.rio.helpers.NTriplesUtil;
+
 import it.uniroma2.art.semanticturkey.extension.extpts.reformattingexporter.ClosableFormattedResource;
 import it.uniroma2.art.semanticturkey.extension.extpts.reformattingexporter.ExporterContext;
 import it.uniroma2.art.semanticturkey.extension.extpts.reformattingexporter.ReformattingException;
@@ -17,25 +38,6 @@ import it.uniroma2.art.semanticturkey.extension.impl.reformattingexporter.spread
 import it.uniroma2.art.semanticturkey.i18n.STMessageSource;
 import it.uniroma2.art.semanticturkey.project.Project;
 import it.uniroma2.art.semanticturkey.utilities.ModelUtilities;
-import org.eclipse.rdf4j.model.IRI;
-import org.eclipse.rdf4j.model.Literal;
-import org.eclipse.rdf4j.model.Value;
-import org.eclipse.rdf4j.model.vocabulary.RDF;
-import org.eclipse.rdf4j.query.BindingSet;
-import org.eclipse.rdf4j.query.TupleQuery;
-import org.eclipse.rdf4j.query.TupleQueryResult;
-import org.eclipse.rdf4j.repository.RepositoryConnection;
-import org.eclipse.rdf4j.rio.helpers.NTriplesUtil;
-
-import javax.annotation.Nullable;
-import java.io.File;
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 
 /**
  * A {@link ReformattingExporter} that serializes RDF data in Spreadsheet format
@@ -68,7 +70,7 @@ public class SpreadsheetSerializingExporter implements ReformattingExporter {
 		String prefLang = config.language;
 
 
-		prefixDeclaraionMap = exporterContext.getProject().getNewOntologyManager().getNSPrefixMappings(false);
+		prefixDeclaraionMap = exporterContext.getProject().getOntologyManager().getNSPrefixMappings(false);
 
 		if(!exporterContext.getProject().getModel().equals(Project.SKOS_MODEL)){
 			//only SKOS Model should be used
